<resources>
    <string name="app_name" translatable="false">الدلالة</string>
    <string name="forgot_password">هل نسيت كلمة المرور؟</string>
    <string name="password">كلمه السر</string>
    <string name="navigation_drawer_close"> إغلاق درج التنقل </string>
    <string name="action_settings"> الإعدادات </string>
    <string name="add_your_post"> إضافة مشاركتك </string>
    <string name="deal_in_location"> صفقة مقترحة في موقعك </string>
    <string name="search_model"> نموذج البحث والسعر وما إلى ذلك ... </string>
    <string name="user_manage"> إدارة المستخدم </string>
    <string name="user_profile"> ملف تعريف المستخدم </string>
    <string name="my_posts"> مشاركاتي </string>
    <string name="my_favorites"> المفضلة </string>
    <string name="ads"> ADS </string>
    <string name="specifications"> المواصفات </string>
    <string name="details"> التفاصيل </string>
    <string name="owner_contact"> جهة اتصال المالك </string>
    <string name="reviews"> المراجعات </string>
    <string name="similar_products"> منتجات مماثلة </string>
    <string name="filter_by"> تصفية حسب </string>
    <string name="clear_all"> مسح الكل </string>
    <string name="call"> مكالمة </string>
    <string name="chat"> الدردشة </string>
    <string name="brief_about_ad"> ملخص عن الإعلان </string>
    <string name="post_an_ad"> نشر إعلان </string>
    <string name="edit_gallery"> تحرير صور المعرض </string>
    <string name="profile_pic_note"> الحفاظ على صورة الملف الشخصي للإعلان </string>
    <string name="post_new_ad"> نشر إعلان جديد </string>
    <string name="ad_title"> عنوان الإعلان * </string>
    <string name="phone"> الهاتف * </string>
    <string name="birth_date"> تاريخ الميلاد: \ u0020 </string>
    <string name="reset_password"> إعادة تعيين كلمة المرور </string>
    <string name="register_later"> التسجيل لاحقًا </string>
    <string name="or"> أو</string>
    <string name="login"> تسجيل الدخول </string>
    <string name="register_new"> تسجيل جديد </string>
    <string name="email_id"> معرف البريد الإلكتروني </string>
    <string name="error_invalid_email"> عنوان البريد الإلكتروني هذا غير صالح </string>
    <string name="error_invalid_password"> كلمة المرور هذه قصيرة جدًا </string>
    <string name="error_field_required"> هذا الحقل مطلوب </string>
    <string name="register"> التسجيل </string>
    <string name="re_password"> إعادة كلمة المرور </string>
    <string name="mobile_no"> رقم الجوال </string>
    <string name="full_name"> الاسم الكامل </string>
    <string name="phone_to_short"> رقم الهاتف هذا قصير جدًا </string>
    <string name="password_not_match"> تطابق كلمة المرور غير المتطابقة </string>
    <string name="select_city"> حدد المدينة </string>
    <string name="continue_with_city"> استمر في اختيار المدينة </string>
    <string name="city_note"> سيسمح لك الموقع بتصفية السجلات \ nas حسب منطقتك </string>
    <string name="front_side"> الجانب الأمامي * </string>
    <string name="back_side"> الجانب الخلفي * </string>
    <string name="inner_look"> نظرة داخلية * </string>
    <string name="outer_look"> المظهر الخارجي * </string>
    <string name="other"> أخرى </string>
    <string name="continue_to_upload"> متابعة التحميل </string>
    <string name="continue_step_2"> استمر في الخطوة 2 </string>
    <string name="color"> اللون </string>
    <string name="fuel_type"> نوع الوقود </string>
    <string name="gear_type"> نوع الترس </string>
    <string name="cc"> CC </string>
    <string name="finish_publish"> إنهاء ونشر </string>
    <string name="feature_sale"> ميزة للبيع </string>
    <string name="step1"> الخطوة 1 من 3 </string>
    <string name="step3"> الخطوة 3 إلى 3 </string>
    <string name="step2"> الخطوة 2 إلى 3 </string>
    <string name="please_select_city"> يرجى تحديد المدينة </string>
    <string name="title_for_sale"> عنوان البيع * </string>
    <string name="price_for_sale">"السعر * "</string>
    <string name="choose_category"> اختر الفئة * </string>
    <string name="mfg_year"> Mfg عام * </string>
    <string name="drive_in_km"> القيادة (بالكيلومتر) * </string>
    <string name="owner_type"> نوع المالك * </string>
    <string name="km"> KM </string>
    <string name="rs"> RS </string>
    <string name="write_about_sale">اكتب عنه *</string>
    <string name="allow_chars"> اسمح بـ 240 حرفًا للوصف تقريبًا </string>
    <string name="email_required"> معرف البريد الإلكتروني (مطلوب) </string>
    <string name="password_required"> كلمة المرور (مطلوبة) </string>
    <string name="name_required"> الاسم الكامل (مطلوب) </string>
    <string name="mobile_required"> رقم الجوال (مطلوب) </string>
    <string name="repassword_required"> إعادة كلمة المرور (مطلوب) </string>
    <string name="add_sale"> إضافة تخفيضات </string>
    <string name="edit_sale"> تعديل البيع </string>
    <string name="choose_location"> اختر الموقع </string>
    <string name="image_already_uploaded"> تم تحميل هذه الصورة بالفعل </string>
    <string name="camera"> الكاميرا </string>
    <string name="gallery"> المعرض </string>
    <string name="profile_updated"> تم تحديث الملف الشخصي </string>
    <string name="profile_pic_updated"> تم تحديث صورة الملف الشخصي </string>
    <string name="logout"> تسجيل الخروج </string>
    <string name="change_password"> تغيير كلمة المرور </string>
    <string name="edit_profile"> تعديل الملف الشخصي </string>
    <string name="update_Profile"> تحديث الملف الشخصي </string>
    <string name="title_activity_main2"> نشاط Main2 </string>
    <string name="old_password_req"> كلمة المرور القديمة (مطلوبة) </string>
    <string name="new_password_req"> كلمة المرور الجديدة (مطلوبة) </string>
    <string name="confirm_password_req"> تأكيد كلمة المرور (مطلوب) </string>
    <string name="send"> إرسال </string>
    <string name="enter_message_here"> أدخل الرسالة هنا .. </string>
    <string name="chat_title"> الدردشة </string>
    <string name="press_back"> اضغط مرة أخرى للخروج. </string>
    <string name="press_back_gallery"> اضغط للخلف مرة أخرى للخروج من المعرض. </string>
    <string name="press_back_feature"> اضغط مرة أخرى على الميزات. </string>
    <string name="record_not_found"> ​​لم يتم العثور على السجل </string>
    <string name="edit_details"> تعديل التفاصيل </string>
    <string name="delete"> حذف </string>
    <string name="your_rating"> تقييمك </string>
    <string name="your_comment"> تعليقك </string>
    <string name="comment_here"> تعليقك هنا </string>
    <string name="add_review"> إضافة مراجعة </string>
    <string name="descreption"> الوصف: \ u0020 </string>
    <string name="edit_feature"> تعديل الميزة </string>
    <string name="cancel">إلغاء</string>
    <string name="field_requierd"> هذا الحقل مطلوب </string>
    <string name="note_review"> لا يمكنك المراجعة في مشاركتك </string>
    <string name="note_call"> هل ترغب في إجراء المكالمة؟ </string>
    <string name="owner_name"> اسم المالك: \ u0020 </string>
    <string name="owner_email"> البريد الإلكتروني للمالك: \ u0020 </string>
    <string name="owner_phone"> رقم هاتف المالك: \ u0020 </string>
    <string name="added_favorite"> تمت إضافة المفضلة </string>
    <string name="remove_favorite"> إزالة المفضلة </string>
    <string name="clear_all_favorite"> محو كل المفضلة </string>
    <string name="submit"> إرسال </string>
    <string name="search_hint"> البحث عن سيارات جديدة ، سيارات قديمة ، إلخ .. </string>
    <string name="connect"> التواصل </string>
    <string name="about_us"> من نحن </string>
    <string name="terms_conditions"> الشروط والأحكام الشروط </string>
    <string name="review_us"> راجعنا </string>
    <string name="share"> شارك مع الأصدقاء </string>
    <string name="search" translatable="true"> بحث </string>
    <string name="view_all"> عرض الكل </string>
    <string name="clear_favorite_note"> هل أنت متأكد! لن تمسح قائمة المفضلة </string>
    <string name="delete_post_note"> هل أنت متأكد من حذف هذه المشاركة؟ </string>
    <string name="in_complete"> مكتملة </string>
    <string name="add_photo"> أضف صورة! </string>
    <string name="take_photo"> التقاط صورة </string>
    <string name="choose_from_library"> اختر من المكتبة </string>
    <string name="kms"> كم </string>
    <string name="image_succesfully_updated"> تم تحديث الصورة بنجاح. </string>
    <string name="image_succesfully_added"> تمت إضافة الصورة بنجاح. </string>
    <string name="navigation_drawer_open"> افتح درج التنقل </string>
    <string name="notification">"إشعارات "</string>
    <string name="communicate">"نقل "</string>
    <string name="able_to_call">لا يمكنك أن تتصل بنفسك</string>
    <string name="apply_now">"قدم الآن "</string>
    <string name="english">الإنجليزية</string>
    <string name="arabic">"عربى "</string>
    <string name="record_not_found_location">"السجل غير موجود في موقعك. "</string>
    <string name="language_changed">"تم تغيير اللغة بنجاح "</string>
    <string name="new_languages">"لقد تم تحويلك إلى لغة جديدة "</string>
    <string name="language">"لغة "</string>
    <string name="sell_or_rent">"بيع او ايجار "</string>
    <string name="sell">يبيع</string>
    <string name="rent">"تأجير "</string>
    <string name="select_one">--حدد واحد --</string>
    <string name="about">" عن التطبيق   يوفر لك تطبيق الدلالة أفضل الصفقات الممكنة ، مجموعة من خيارات الشراء ، تأجير السيارات في السودان "</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="email_or_phone">البريد الإلكتروني أو رقم الهاتف</string>
    <string name="how_to_pay">كيفية دفع</string>
</resources>