<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_review_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/space_10">

    <TextView
        android:id="@+id/tv_review_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_rating" />

    <RatingBar
        android:id="@+id/rb_review_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:backgroundTint="@color/black"
        android:stepSize="1" />

    <TextView
        android:id="@+id/tv_review_dialog_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/your_comment" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ti_review_dialog_comment">

        <EditText
            android:id="@+id/et_review_dialog_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:ems="10"
            android:hint="@string/comment_here"
            android:inputType="textPersonName"
            app:theme="@style/edittextstyle_black" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>