<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    tools:context="techline.carsapp.ForgotActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_10">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textColor="#0B0A0A"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_forgot_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5"
                android:layout_marginLeft="@dimen/space_5"
                android:layout_marginTop="@dimen/space_10"
                android:text="@string/email_required"
                android:textColor="#0B0A0A" />

            <EditText
                android:id="@+id/et_forgot_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_login_user"
                android:drawablePadding="@dimen/space_8"
                android:drawableStart="@drawable/ic_login_user"
                android:ems="10"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:padding="@dimen/space_10"
                android:textColor="@color/text_border"
                android:textColorHint="@color/text_hint"
                android:theme="@style/edittextstyle" />

            <Button
                android:id="@+id/btn_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:background="@drawable/xml_rounded_button_bg"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
